change the default layout ,add stories and bug fixes
change the storybook default layout to TORCH layout.

the components are :
- Alerts
- Badges
- Buttons
- CheckBoxes
- Counters
- DatePickers
- DropDowns

bug fix :
- add css box-sizing:border-box for all component

--- a/src/lib/components/base/alerts/alert/style.scss
+++ b/src/lib/components/base/alerts/alert/style.scss
@@ -1,5 +1,9 @@
 @import '../../../../styles/typography/index.scss';
 
+* {
+    box-sizing: border-box;
+}
+
 .glare-alert {
     display: flex;
     position: relative;
