--- a/src/lib/components/base/fields/ActionBarInputField/style.scss
+++ b/src/lib/components/base/fields/ActionBarInputField/style.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .glare-action-bar-InputField {
     width: 100%;
     border-radius: var(--Radius-2-max, 4px);
