--- a/src/lib/components/base/labels/label/style.scss
+++ b/src/lib/components/base/labels/label/style.scss
@@ -25,6 +25,7 @@
             color: var(--content-presentation-global-secondary);
             @include Labels-typography-Small-Regular;
             margin-bottom: 1.5px;
+            margin-top: 0;
             text-align: start;
         }
 
