--- a/src/lib/components/base/dropDowns/dropDownMenuItem/styles/style.scss
+++ b/src/lib/components/base/dropDowns/dropDownMenuItem/styles/style.scss
@@ -1,5 +1,9 @@
 @import '../../../../../styles/typography/index.scss';
 
+* {
+    box-sizing: border-box;
+}
+
 .dropDownMenuItem {
     padding: 0 12px;
     height: 24px;
@@ -33,6 +37,8 @@
         justify-content: center;
         align-items: center;
         gap: 4px;
+        background: transparent;
+        border: none;
     }
 
     &:hover {
