--- a/src/lib/components/base/steppers/stepperDivider/style.scss
+++ b/src/lib/components/base/steppers/stepperDivider/style.scss
@@ -1,5 +1,9 @@
 @import '../../../../styles/mediaQuery/queries.scss';
 
+* {
+    box-sizing: border-box;
+}
+
 .stepper-tab-divider {
     position: relative;
 
