--- a/src/lib/components/base/tabs/tabFormItem/components/topFormBar-Item/style.scss
+++ b/src/lib/components/base/tabs/tabFormItem/components/topFormBar-Item/style.scss
@@ -1,5 +1,9 @@
 @import '../../../../../../styles/typography/index.scss';
 
+* {
+    box-sizing: border-box;
+}
+
 .TopFormBarItem {
     border-radius: 4px;
     padding: 0px 24px;
