--- a/src/lib/components/helpers/dynamicContainer/style.scss
+++ b/src/lib/components/helpers/dynamicContainer/style.scss
@@ -1,8 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
 .Dynamic-Container {
     position: absolute;
     left: 0;
     padding: 8px 0;
-    width: 100%;
     width: 100%;
     z-index: 10;
 }
