--- a/src/lib/components/shared/LoginCardComponents/passwordLevel/style.scss
+++ b/src/lib/components/shared/LoginCardComponents/passwordLevel/style.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .password-level {
     background: var(--background-system-body-secondary);
     border-radius: 4px;
