--- a/src/lib/components/base/tooltips/tooltip/style.scss
+++ b/src/lib/components/base/tooltips/tooltip/style.scss
@@ -25,6 +25,7 @@
         width: fit-content;
         overflow: hidden;
         word-wrap: break-word;
+        margin: 0 !important;
     }
 
     .triangle {
