--- a/src/lib/components/base/fields/inputField/components/input/style.scss
+++ b/src/lib/components/base/fields/inputField/components/input/style.scss
@@ -9,7 +9,7 @@
     position: relative;
     border: 1px solid var(--border-presentation-action-primary);
     border-radius: var(--Radius-2-max, 4px);
-    padding: 0px 8px;
+    padding: 0px 4px;
     background-color: var(--background-presentation-form-field-primary);
     transition: all 150ms ease-in-out;
 
@@ -23,7 +23,6 @@
         justify-content: flex-start;
         align-items: center;
         overflow: scroll;
-        gap: 4px;
         height: 100%;
         width: 100%;
 
@@ -31,7 +30,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 4px;
             flex: 1;
             padding: 0 1px;
             min-width: 150px;
@@ -47,6 +45,7 @@
             outline: none;
             transition: all 250ms ease-in-out;
             background: inherit;
+            padding: 0 4px;
             color: var(--content-presentation-action-light-primary);
             @include Body-typography-Small-Regular;
             caret-color: var(--content-presentation-action-hover-information) !important;
@@ -69,6 +68,8 @@
             .glare-input-trailingLabel {
                 @include Labels-typography-Medium-Medium;
                 color: var(--content-presentation-action-light-primary);
+                margin: 0 !important;
+                white-space: nowrap;
             }
         }
 
