add themes docs

--- a/src/lib/styles/colors/index.css
+++ b/src/lib/styles/colors/index.css
@@ -328,7 +328,7 @@
 
 
 
-/* Dark theme */
+/* Light theme */
 [data-theme="light"] {
     --background-presentation-table-row-selected: #4200FF0D;
     --border-presentation-table-selected: #CFBEFFFF;
