--- a/src/lib/components/base/buttons/LinkButton/style.scss
+++ b/src/lib/components/base/buttons/LinkButton/style.scss
@@ -27,7 +27,7 @@
             opacity: 1;
             padding: 3px;
 
-            img {
+            svg {
                 display: block;
             }
         }
@@ -45,7 +45,7 @@
         overflow: hidden;
         transition: all 150ms ease-in-out;
 
-        img {
+        svg {
             transition: all 250ms ease-in-out;
         }
     }
@@ -60,7 +60,7 @@
         .link-button-arrow-container {
             width: 20px;
 
-            img {
+            svg {
                 width: 14px;
                 height: 14px;
             }
@@ -71,7 +71,7 @@
         width: 0px;
         height: 20px;
 
-        img {
+        svg {
             width: 0px;
             height: 0px;
         }
@@ -86,7 +86,7 @@
         .link-button-arrow-container {
             width: 22px;
 
-            img {
+            svg {
                 width: 16px;
                 height: 16px;
             }
@@ -97,7 +97,7 @@
         width: 0px;
         height: 22px;
 
-        img {
+        svg {
             width: 0px;
             height: 0px;
         }
@@ -112,7 +112,7 @@
         .link-button-arrow-container {
             width: 22px;
 
-            img {
+            svg {
                 width: 16px;
                 height: 16px;
             }
@@ -123,7 +123,7 @@
         width: 0px;
         height: 22px;
 
-        img {
+        svg {
             width: 0px;
             height: 0px;
         }
@@ -131,7 +131,7 @@
 }
 
 .link-button-reverse {
-    img {
+    svg {
         transform: rotate(-90deg);
     }
 }
