--- a/src/lib/components/base/buttons/button/variants/_variants.scss
+++ b/src/lib/components/base/buttons/button/variants/_variants.scss
@@ -144,6 +144,11 @@
     height: 22px;
     padding: 0px 6px;
 
+    .glare-button-loading-img {
+        width: 12px;
+        height: 12px;
+    }
+
     .glare-button-icon {
         width: 12px;
 
@@ -157,6 +162,11 @@
     @include Body-typography-Medium-Medium;
     height: 26px;
     padding: 0px 8px;
+
+    .glare-button-loading-img {
+        width: 16px;
+        height: 16px;
+    }
 
     .glare-button-icon {
         width: 16px;
@@ -172,6 +182,12 @@
     height: 28px;
 
     padding: 0px 15px;
+
+
+    .glare-button-loading-img {
+        width: 18px;
+        height: 18px;
+    }
 
     .glare-button-icon {
         width: 18px;
