--- a/src/lib/components/base/loading/ringLoading/style.scss
+++ b/src/lib/components/base/loading/ringLoading/style.scss
@@ -13,6 +13,7 @@
         animation: spin 1.5s infinite linear;
         object-position: 50% 50%;
         object-fit: cover;
+        background: transparent;
     }
 
 
