--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(192, 192, 192);
+    /*     background-color: rgb(192, 192, 192);
+ */
 }
 
 .app {
