add docs for tables

--- a/src/lib/components/base/tables/table/components/style.scss
+++ b/src/lib/components/base/tables/table/components/style.scss
@@ -1,6 +1,7 @@
 .glare-table-row {
     position: relative;
     transition: all 200ms ease-in-out;
+    min-height: 30px;
 
 
     .glare-label {
@@ -26,6 +27,12 @@
     td {
         border-bottom: 1px solid var(--border-presentation-global-primary);
         border-right: 1px solid var(--border-presentation-global-primary);
+    }
+}
+
+.table-cell-dummy {
+    td {
+        border-right: unset;
     }
 }
 
