--- a/src/lib/components/base/tables/table/style.scss
+++ b/src/lib/components/base/tables/table/style.scss
@@ -2,18 +2,38 @@
     box-sizing: border-box;
 }
 
-.glare-table {
-    width: fit-content;
-    overflow: scroll;
-    border-collapse: collapse;
+.glare-table-wrapper {
 
-    thead {
-        th {
-            padding: 4px;
+    display: flex;
+
+    .glare-table {
+        width: fit-content;
+        border-collapse: collapse;
+
+        thead {
+            th {
+                padding: 4px;
+            }
+
+            border-top: 2px solid transparent;
+            border-bottom: 2px solid var(--border-presentation-table-header) !important;
+            transition: all 250ms ease-in-out;
         }
-
-        border-top: 2px solid transparent;
-        border-bottom: 2px solid var(--border-presentation-table-header) !important;
-        transition: all 250ms ease-in-out;
     }
+
+    .glare-dummy-table {
+        width: 100%;
+        border-collapse: collapse;
+
+        thead {
+            th {
+                padding: 4px;
+            }
+
+            border-top: 2px solid transparent;
+            border-bottom: 2px solid var(--border-presentation-table-header) !important;
+            transition: all 250ms ease-in-out;
+        }
+    }
+
 }
