--- a/src/lib/components/base/upload&download/attachmentField/style.scss
+++ b/src/lib/components/base/upload&download/attachmentField/style.scss
@@ -2,6 +2,7 @@
 
 .glare-attachment-drop-zone {
     width: 100%;
+    min-width: 200px;
     height: 60px !important;
     flex-direction: column;
     border-radius: 8px !important;
