--- a/src/lib/components/base/upload&download/picContainer/components/expandImage/style.scss
+++ b/src/lib/components/base/upload&download/picContainer/components/expandImage/style.scss
@@ -18,6 +18,7 @@
         @include Labels-typography-Small-Regular;
         max-width: 50px;
         word-break: break-all;
+        margin: 0 !important;
     }
 
     &:hover {
