make ts paths and update scss files

--- a/src/lib/components/base/dropDowns/dropDownMenuItem/styles/_variants.scss
+++ b/src/lib/components/base/dropDowns/dropDownMenuItem/styles/_variants.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/typography/index.scss';
+@import '@/styles/typography';
 
 .menuItem-Presentation-Warning-Style {
     color: var(--content-presentation-state-information);
