--- a/src/lib/components/base/datePickers/datePicker/_variants.scss
+++ b/src/lib/components/base/datePickers/datePicker/_variants.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/typography/index.scss';
+@import '@/styles/typography';
 
 .glare-date-picker {
     position: relative;
