--- a/src/lib/components/base/dropDowns/dropDownButton/style.scss
+++ b/src/lib/components/base/dropDowns/dropDownButton/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/typography/index.scss';
+@import '@/styles/typography';
 
 .glare-drop-down-button {
     width: fit-content;
