--- a/src/lib/components/base/steppers/stepperTab/components/stepperLine/components/circle/style.scss
+++ b/src/lib/components/base/steppers/stepperTab/components/stepperLine/components/circle/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../../../styles/typography/index.scss';
+@import '@/styles/typography';
 
 .glare-stepper-counter-circle {
     border-radius: 50%;
