--- a/src/lib/components/base/upload&download/attachedPic/style.scss
+++ b/src/lib/components/base/upload&download/attachedPic/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/typography/index.scss';
+@import '@/styles/typography';
 
 .glare-attached-pic-wrapper {
     display: flex;
