--- a/src/lib/components/base/upload&download/attachmentField/style.scss
+++ b/src/lib/components/base/upload&download/attachmentField/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/typography/index.scss';
+@import '@/styles/typography';
 
 .glare-attachment-drop-zone {
     width: 100%;
