--- a/src/lib/components/base/upload&download/picContainer/components/expandImage/style.scss
+++ b/src/lib/components/base/upload&download/picContainer/components/expandImage/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../styles/typography/index.scss';
+@import '@/styles/typography';
 
 .glare-attachment-expand-wrapper {
     display: flex;
