--- a/src/lib/components/shared/forms/fieldSection/style.scss
+++ b/src/lib/components/shared/forms/fieldSection/style.scss
@@ -12,6 +12,12 @@
     align-items: flex-start;
     gap: 12px;
 
+    .glare-field-section-input-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
     @include respond-to(tabletPortrait) {
         align-items: center;
         justify-content: space-between;
