--- a/src/lib/components/base/fields/labelLessInput/style.scss
+++ b/src/lib/components/base/fields/labelLessInput/style.scss
@@ -6,7 +6,7 @@
     position: relative;
     border: 1px solid var(--border-presentation-action-primary);
     border-radius: var(--Radius-2-max, 4px);
-    padding: 2px 3px;
+    padding: 2px 4px;
     background-color: var(--background-presentation-form-field-primary);
     transition: all 150ms ease-in-out;
 
@@ -21,7 +21,6 @@
         align-items: center;
         overflow: scroll;
         height: 100%;
-        gap: 4px;
         transition: all 300ms ease-in-out;
 
         .input-container {
@@ -55,7 +54,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 4px;
+            padding: 0 4px;
             width: fit-content;
             font-size: 14px;
             color: #A0A0A0;
