--- a/src/lib/components/base/buttons/button/variants/default.scss
+++ b/src/lib/components/base/buttons/button/variants/default.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     border: none;
+    outline: none;
     gap: 4px;
     transition: all 300ms ease-in-out;
 
@@ -39,7 +40,7 @@
     }
 
     &:focus {
-        outline: 1.5px solid var(--border-presentation-state-focus);
+        border: 1.5px solid var(--border-presentation-state-focus);
         background: var(--background-presentation-action-secondary);
         color: var(--content-presentation-action-light-primary);
 
@@ -49,7 +50,7 @@
     }
 
     &:active {
-        outline: 1.5px solid var(--border-presentation-state-focus);
+        border: 1.5px solid var(--border-presentation-state-focus);
         background: var(--background-presentation-action-secondary);
         color: var(--content-presentation-action-light-primary);
 
@@ -70,7 +71,7 @@
         &:hover {
             background: var(--background-presentation-action-disabled);
             color: var(--content-presentation-state-disabled);
-            outline: none;
+            border: none;
 
             .glare-button-icon {
                 color: var(--content-presentation-state-disabled);
@@ -93,17 +94,17 @@
     &:hover {
         background-color: var(--background-presentation-action-hover);
         color: white;
-        outline: none;
+        border: none;
     }
 
     &:focus {
-        outline: none;
+        border: none;
         background-color: var(--background-presentation-action-hover);
         color: white;
     }
 
     &:active {
-        outline: none;
+        border: none;
         background-color: var(--background-presentation-action-hover);
         color: white;
     }
