--- a/src/lib/components/base/fields/labelLessInput/components/inputLabel/style.scss
+++ b/src/lib/components/base/fields/labelLessInput/components/inputLabel/style.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     gap: 4px;
+    padding: 0 4px;
     transition: all 300ms ease-in-out;
 
     .glare-InputLabel-label-wrapper {
