--- a/src/lib/styles/colors/index.css
+++ b/src/lib/styles/colors/index.css
@@ -1,8 +1,8 @@
-@import './themes/index.css';
-@import './mods/index.css';
+@import "./themes/index.css";
+@import "./mods/index.css";
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
