--- a/src/lib/styles/typography/mixins/EN/body/_large.scss
+++ b/src/lib/styles/typography/mixins/EN/body/_large.scss
@@ -1,34 +1,36 @@
+@import "../variables/index.scss";
+
 @mixin Body-typography-Large-Bold {
-    font-family: inherit;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 148%;
-    /* 23.68px */
+  font-family: inherit;
+  font-size: $font-size-body-large;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 148%;
+  /* 23.68px */
 }
 
 @mixin Body-typography-Large-SemiBold {
-    font-family: inherit;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 590;
-    line-height: 148%;
-    /* 23.68px */
+  font-family: inherit;
+  font-size: $font-size-body-large;
+  font-style: normal;
+  font-weight: 590;
+  line-height: 148%;
+  /* 23.68px */
 }
 
 @mixin Body-typography-Large-Medium {
-    font-family: inherit;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: 148%;
-    /* 23.68px */
+  font-family: inherit;
+  font-size: $font-size-body-large;
+  font-style: normal;
+  font-weight: 510;
+  line-height: 148%;
+  /* 23.68px */
 }
 
 @mixin Body-typography-Large-Regular {
-    font-family: inherit;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 147.5%;
+  font-family: inherit;
+  font-size: $font-size-body-large;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 147.5%;
 }
