--- a/src/lib/styles/typography/mixins/EN/body/_small.scss
+++ b/src/lib/styles/typography/mixins/EN/body/_small.scss
@@ -1,31 +1,33 @@
+@import "../variables/index.scss";
+
 @mixin Body-typography-Small-Bold {
-    font-family: inherit;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 148%;
+  font-family: inherit;
+  font-size: $font-size-body-small;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 148%;
 }
 
 @mixin Body-typography-Small-SemiBold {
-    font-family: inherit;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 590;
-    line-height: 148%;
+  font-family: inherit;
+  font-size: $font-size-body-small;
+  font-style: normal;
+  font-weight: 590;
+  line-height: 148%;
 }
 
 @mixin Body-typography-Small-Medium {
-    font-family: inherit;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: 148%;
+  font-family: inherit;
+  font-size: $font-size-body-small;
+  font-style: normal;
+  font-weight: 510;
+  line-height: 148%;
 }
 
 @mixin Body-typography-Small-Regular {
-    font-family: inherit;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 147.5%;
+  font-family: inherit;
+  font-size: $font-size-body-small;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 147.5%;
 }
