--- a/src/lib/styles/typography/mixins/EN/display/_large.scss
+++ b/src/lib/styles/typography/mixins/EN/display/_large.scss
@@ -1,35 +1,37 @@
+@import "../variables/index.scss";
+
 @mixin Display-typography-Large-Bold {
-    font-family: inherit;
-    font-size: 34px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
-    letter-spacing: -0.34px;
+  font-family: inherit;
+  font-size: $font-size-display-large;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  letter-spacing: -0.34px;
 }
 
 @mixin Display-typography-Large-SemiBold {
-    font-family: inherit;
-    font-size: 34px;
-    font-style: normal;
-    font-weight: 590;
-    line-height: 120%;
-    letter-spacing: -0.34px;
+  font-family: inherit;
+  font-size: $font-size-display-large;
+  font-style: normal;
+  font-weight: 590;
+  line-height: 120%;
+  letter-spacing: -0.34px;
 }
 
 @mixin Display-typography-Large-Medium {
-    font-family: inherit;
-    font-size: 34px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: 120%;
-    letter-spacing: -0.34px;
+  font-family: inherit;
+  font-size: $font-size-display-large;
+  font-style: normal;
+  font-weight: 510;
+  line-height: 120%;
+  letter-spacing: -0.34px;
 }
 
 @mixin Display-typography-Large-Regular {
-    font-family: inherit;
-    font-size: 34px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-    letter-spacing: -0.34px;
+  font-family: inherit;
+  font-size: $font-size-display-large;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: -0.34px;
 }
