--- a/src/lib/styles/typography/mixins/EN/display/_medium.scss
+++ b/src/lib/styles/typography/mixins/EN/display/_medium.scss
@@ -1,38 +1,40 @@
+@import "../variables/index.scss";
+
 @mixin Display-typography-Medium-Bold {
-    font-family: inherit;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
-    letter-spacing: -0.28px;
+  font-family: inherit;
+  font-size: $font-size-display-medium;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  letter-spacing: -0.28px;
 }
 
 @mixin Display-typography-Medium-SemiBold {
-    font-family: inherit;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 590;
-    line-height: 120%;
-    /* 33.6px */
-    letter-spacing: -0.28px;
+  font-family: inherit;
+  font-size: $font-size-display-medium;
+  font-style: normal;
+  font-weight: 590;
+  line-height: 120%;
+  /* 33.6px */
+  letter-spacing: -0.28px;
 }
 
 @mixin Display-typography-Medium-Medium {
-    font-family: inherit;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: 120%;
-    /* 33.6px */
-    letter-spacing: -0.28px;
+  font-family: inherit;
+  font-size: $font-size-display-medium;
+  font-style: normal;
+  font-weight: 510;
+  line-height: 120%;
+  /* 33.6px */
+  letter-spacing: -0.28px;
 }
 
 @mixin Display-typography-Medium-Regular {
-    font-family: inherit;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
-    /* 33.6px */
-    letter-spacing: -0.28px;
+  font-family: inherit;
+  font-size: $font-size-display-medium;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  /* 33.6px */
+  letter-spacing: -0.28px;
 }
