--- a/src/lib/styles/typography/mixins/EN/headers/_large.scss
+++ b/src/lib/styles/typography/mixins/EN/headers/_large.scss
@@ -1,38 +1,40 @@
+@import "../variables/index.scss";
+
 @mixin Headers-typography-Large-Bold {
-    font-family: inherit;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 132%;
-    letter-spacing: -0.2px;
+  font-family: inherit;
+  font-size: $font-size-headers-large;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 132%;
+  letter-spacing: -0.2px;
 }
 
 @mixin Headers-typography-Large-SemiBold {
-    font-family: inherit;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 590;
-    line-height: 132%;
-    /* 26.4px */
-    letter-spacing: -0.2px;
+  font-family: inherit;
+  font-size: $font-size-headers-large;
+  font-style: normal;
+  font-weight: 590;
+  line-height: 132%;
+  /* 26.4px */
+  letter-spacing: -0.2px;
 }
 
 @mixin Headers-typography-Large-Medium {
-    font-family: inherit;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: 132%;
-    /* 26.4px */
-    letter-spacing: -0.2px;
+  font-family: inherit;
+  font-size: $font-size-headers-large;
+  font-style: normal;
+  font-weight: 510;
+  line-height: 132%;
+  /* 26.4px */
+  letter-spacing: -0.2px;
 }
 
 @mixin Headers-typography-Large-Regular {
-    font-family: inherit;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 132.3%;
-    /* 26.46px */
-    letter-spacing: -0.2px;
+  font-family: inherit;
+  font-size: $font-size-headers-large;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 132.3%;
+  /* 26.46px */
+  letter-spacing: -0.2px;
 }
