--- a/src/lib/styles/typography/mixins/EN/labels/_large.scss
+++ b/src/lib/styles/typography/mixins/EN/labels/_large.scss
@@ -1,39 +1,41 @@
+@import "../variables/index.scss";
+
 @mixin Labels-typography-Large-Bold {
-    font-family: inherit;
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 142%;
-    /* 15.62px */
-    letter-spacing: 0.22px;
+  font-family: inherit;
+  font-size: $font-size-label-large;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 142%;
+  /* 15.62px */
+  letter-spacing: 0.22px;
 }
 
 @mixin Labels-typography-Large-SemiBold {
-    font-family: inherit;
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 590;
-    line-height: 142%;
-    /* 15.62px */
-    letter-spacing: 0.22px;
+  font-family: inherit;
+  font-size: $font-size-label-large;
+  font-style: normal;
+  font-weight: 590;
+  line-height: 142%;
+  /* 15.62px */
+  letter-spacing: 0.22px;
 }
 
 @mixin Labels-typography-Large-Medium {
-    font-family: inherit;
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 510;
-    line-height: 142%;
-    /* 15.62px */
-    letter-spacing: 0.22px;
+  font-family: inherit;
+  font-size: $font-size-label-large;
+  font-style: normal;
+  font-weight: 510;
+  line-height: 142%;
+  /* 15.62px */
+  letter-spacing: 0.22px;
 }
 
 @mixin Labels-typography-Large-Regular {
-    font-family: inherit;
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 142%;
-    /* 15.62px */
-    letter-spacing: 0.22px;
+  font-family: inherit;
+  font-size: $font-size-label-large;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142%;
+  /* 15.62px */
+  letter-spacing: 0.22px;
 }
