remove unnecessary new style version

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   align-items: center;
   height: 100vh;
   padding: 10px;
-  background-color: black;
+  /* background-color: black; */
   /*     background-color: rgb(192, 192, 192);
  */
 }
