--- a/src/lib/styles/typography/mixins/EN/display/_medium.scss
+++ b/src/lib/styles/typography/mixins/EN/display/_medium.scss
@@ -1,8 +1,7 @@
-@import "../variables/index.scss";
 
 @mixin Display-typography-Medium-Bold {
   font-family: inherit;
-  font-size: $font-size-display-medium;
+  font-size: 28px;
   font-style: normal;
   font-weight: 700;
   line-height: 120%;
@@ -11,7 +10,7 @@
 
 @mixin Display-typography-Medium-SemiBold {
   font-family: inherit;
-  font-size: $font-size-display-medium;
+  font-size: 28px;
   font-style: normal;
   font-weight: 590;
   line-height: 120%;
@@ -21,7 +20,7 @@
 
 @mixin Display-typography-Medium-Medium {
   font-family: inherit;
-  font-size: $font-size-display-medium;
+  font-size: 28px;
   font-style: normal;
   font-weight: 510;
   line-height: 120%;
@@ -31,7 +30,7 @@
 
 @mixin Display-typography-Medium-Regular {
   font-family: inherit;
-  font-size: $font-size-display-medium;
+  font-size: 28px;
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
