--- a/src/lib/styles/typography/mixins/EN/body/_large.scss
+++ b/src/lib/styles/typography/mixins/EN/body/_large.scss
@@ -1,8 +1,6 @@
-@import "../variables/index.scss";
-
 @mixin Body-typography-Large-Bold {
   font-family: inherit;
-  font-size: $font-size-body-large;
+  font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 148%;
@@ -11,7 +9,7 @@
 
 @mixin Body-typography-Large-SemiBold {
   font-family: inherit;
-  font-size: $font-size-body-large;
+  font-size: 16px;
   font-style: normal;
   font-weight: 590;
   line-height: 148%;
@@ -20,7 +18,7 @@
 
 @mixin Body-typography-Large-Medium {
   font-family: inherit;
-  font-size: $font-size-body-large;
+  font-size: 16px;
   font-style: normal;
   font-weight: 510;
   line-height: 148%;
@@ -29,7 +27,7 @@
 
 @mixin Body-typography-Large-Regular {
   font-family: inherit;
-  font-size: $font-size-body-large;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 147.5%;
