--- a/src/lib/styles/typography/mixins/EN/body/_medium.scss
+++ b/src/lib/styles/typography/mixins/EN/body/_medium.scss
@@ -1,8 +1,7 @@
-@import "../variables/index.scss";
 
 @mixin Body-typography-Medium-Bold {
   font-family: inherit;
-  font-size: $font-size-body-medium;
+  font-size: 14px;
   font-style: normal;
   font-weight: 700;
   line-height: 148%;
@@ -10,7 +9,7 @@
 
 @mixin Body-typography-Medium-SemiBold {
   font-family: inherit;
-  font-size: $font-size-body-medium;
+  font-size: 14px;
   font-style: normal;
   font-weight: 590;
   line-height: 148%;
@@ -18,7 +17,7 @@
 
 @mixin Body-typography-Medium-Medium {
   font-family: inherit;
-  font-size: $font-size-body-medium;
+  font-size: 14px;
   font-style: normal;
   font-weight: 510;
   line-height: 148%;
@@ -26,7 +25,7 @@
 
 @mixin Body-typography-Medium-Regular {
   font-family: inherit;
-  font-size: $font-size-body-medium;
+  font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 147.5%;
