--- a/src/lib/styles/typography/mixins/EN/headers/_large.scss
+++ b/src/lib/styles/typography/mixins/EN/headers/_large.scss
@@ -1,8 +1,7 @@
-@import "../variables/index.scss";
 
 @mixin Headers-typography-Large-Bold {
   font-family: inherit;
-  font-size: $font-size-headers-large;
+  font-size: 20px;
   font-style: normal;
   font-weight: 700;
   line-height: 132%;
@@ -11,7 +10,7 @@
 
 @mixin Headers-typography-Large-SemiBold {
   font-family: inherit;
-  font-size: $font-size-headers-large;
+  font-size: 20px;
   font-style: normal;
   font-weight: 590;
   line-height: 132%;
@@ -21,7 +20,7 @@
 
 @mixin Headers-typography-Large-Medium {
   font-family: inherit;
-  font-size: $font-size-headers-large;
+  font-size: 20px;
   font-style: normal;
   font-weight: 510;
   line-height: 132%;
@@ -31,7 +30,7 @@
 
 @mixin Headers-typography-Large-Regular {
   font-family: inherit;
-  font-size: $font-size-headers-large;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 132.3%;
