--- a/src/lib/styles/typography/mixins/EN/labels/_medium.scss
+++ b/src/lib/styles/typography/mixins/EN/labels/_medium.scss
@@ -1,8 +1,7 @@
-@import "../variables/index.scss";
 
 @mixin Labels-typography-Medium-Bold {
   font-family: inherit;
-  font-size: $font-size-label-medium;
+  font-size: 10px;
   font-style: normal;
   font-weight: 700;
   line-height: 142%;
@@ -12,7 +11,7 @@
 
 @mixin Labels-typography-Medium-SemiBold {
   font-family: inherit;
-  font-size: $font-size-label-medium;
+  font-size: 10px;
   font-style: normal;
   font-weight: 590;
   line-height: 142%;
@@ -22,7 +21,7 @@
 
 @mixin Labels-typography-Medium-Medium {
   font-family: inherit;
-  font-size: $font-size-label-medium;
+  font-size: 10px;
   font-style: normal;
   font-weight: 510;
   line-height: 142%;
@@ -32,7 +31,7 @@
 
 @mixin Labels-typography-Medium-Regular {
   font-family: inherit;
-  font-size: $font-size-label-medium;
+  font-size: 10px;
   font-style: normal;
   font-weight: 400;
   line-height: 142%;
