add version number

--- a/src/lib/styles/colors/mods/dark.css
+++ b/src/lib/styles/colors/mods/dark.css
@@ -1,7 +1,7 @@
 /* Aliases  */
 [data-theme="dark"] {
 
-  /* Maping.Dark2.0 */
+  /* Maping.Dark v2.0 */
   --border-presentation-action-disabled: var(
     --border-presentation-dark-action-disabled
   );
