--- a/src/lib/styles/colors/mods/light.css
+++ b/src/lib/styles/colors/mods/light.css
@@ -1,7 +1,7 @@
 /* Aliases  */
 [data-theme="light"] {
 
-  /* Maping.Light2.0 */
+  /* Maping.Light v2.0 */
   --border-presentation-action-disabled: var(
     --border-presentation-light-action-disabled
   );
