--- a/src/lib/styles/colors/themes/CSS.css
+++ b/src/lib/styles/colors/themes/CSS.css
@@ -3,8 +3,8 @@
 /* Aliases  */
 [data-theme-mode="CSS"] {
 
-  /* Themes.Css 1.0 */
-  /* Themes.Css1.0 Variables */
+  /* Themes.Css v1.0 */
+  /* Themes.Css v1.0 Variables */
   --background-system-dark-folder-solid-grstart: #00000000;
   --background-system-dark-folder-primary-grstart: #00070d00;
   --background-system-dark-folder-hover-grstart: #00469900;
